# math-learning-journey

./: README.md  main.py  pyproject.toml
CryptoHack/11-5-2026/: pyproject.toml  quick_scripts.py
cryptohack/lessons/: intro_cyberhack.py
src/math_learning_journey/: __init__.py
