[project]
name = "math-learning-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maverick Billings", email = "astrolobe853@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "gmpy2>=2.3.0",
    "pwntools>=4.15.0",
    "pycryptodome>=3.23.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
